# smplos

./: .gitignore  .gitmodules  CREATING_MODIFYING_A_THEME.md  DEVELOPMENT.md  README.md  RELEASE_NOTES.md  UPDATING.md
.github/: copilot-instructions.md
.github/workflows/: auto-release.yml
migrations/: 20260315-000000-init-update-system.sh  20260320-200000-eww-button-grab-fix.sh  20260320-201000-hyprshell-default-config.sh  20260322-180000-micro-default-editor.sh  20260325-100000-micro-theme-shortcuts.sh  20260325-200000-webapp-clear-on-exit-full-wipe.sh  20260325-210000-micro-ctrl-underscore-binding.sh  20260329-180000-brave-p3a-suppress.sh  20260329-200000-window-positioning-fixes.sh  20260329-220000-micro-shift-delete-binding.sh  20260613-100000-hyprshell-no-plugin.sh  20260614-090000-nemo-theme-sync.sh  20260614-100000-automount-restart.sh  20260620-120000-greetd-compositor-dispatcher.sh  20260629-120000-xr-glasses-module.sh  20260701-011500-nvidia-suspend-resume.sh  20260701-140000-xdg-user-dirs.sh  20260701-160000-flatpak-removable-media.sh  20260703-100000-default-lts-kernel.sh  20260703-110000-hyprtasking-overview-binds.sh  20260703-120000-native-alt-tab-cycler.sh  20260705-120000-scrolling-side-by-side-binds.sh  20260705-130000-remove-abandoned-smplscroll-plugin.sh  20260707-180000-remove-hyprtasking-plugin.sh  20260707-210000-hypridle-legacy-dpms-syntax.sh  20260719-100000-kernel-modules-hook.sh  20260719-110000-nvidia-container-toolkit.sh  20260719-120000-nvidia-privacy-hardening.sh  20260720-120000-enable-hypridle-service.sh  20260721-130000-harden-exit-hyprland-binding.sh  20260721-200000-micro-ctrlw-binding.sh  20260724-160000-vscode-copilot-chat-shortcut.sh  README.md
release/: dev-apply.sh  dev-local.sh  dev-push.sh  test-iso.sh
src/: build-apps.sh  build-iso.sh  fetch-apps.sh  fetch-org.sh  generate-theme-configs.sh  regen-all-themes.sh  regen-nemo-css.py
src/builder/: build.sh  publish-plugins.sh
src/compositors/dwm/: packages.txt
src/compositors/hyprland/: packages.txt  postinstall.sh
src/compositors/hyprland/hypr/: README.md  apps.lua  aspect_column.lua  autostart.conf  autostart.lua  bindings_loader.lua  emergency.conf  envs.conf  envs.lua  hypridle.conf  hyprland.conf  hyprland.lua  hyprlock.conf  input.conf  input.lua  looknfeel.conf  looknfeel.lua  monitors_loader.lua  popup_watchers.lua  theme.lua  windows.conf  windows.lua  xr-workspace.conf
src/compositors/hyprland/st/: config.def.h  config.mk  wl.c
src/compositors/niri/: README.md  binds.kdl  config.kdl  layer-rules.kdl  packages.txt  postinstall.sh  window-rules.kdl
src/editions/creators/: packages-aur-extra.txt  packages-extra.txt
src/editions/development/: packages-extra.txt  postinstall-extra.sh
src/editions/productivity/: packages-aur-extra.txt  postinstall-extra.sh
src/installer/: smplos-install
src/shared/: packages-aur.txt  packages-flatpak.txt  packages-gpu.txt  packages.txt
src/shared/app-center/src/: catalog.rs  installer.rs  main.rs
src/shared/app-center/ui/: main.slint
src/shared/applications/: sync-center.desktop
src/shared/apps/: .gitignore  Cargo.toml  README.md
src/shared/apps/.github/workflows/: ci.yml  release.yml
src/shared/apps/app-center/: Cargo.toml  build.sh
src/shared/apps/app-center/src/: installer.rs  main.rs
src/shared/apps/app-center/src/sources/: appimage.rs  aur.rs  flathub.rs  mod.rs  pacman.rs  recommended.rs
src/shared/apps/calendar/: Cargo.toml
src/shared/apps/calendar/src/: local_provider.rs  main.rs  provider.rs  theme.rs
src/shared/apps/calendar/ui/: main.slint
src/shared/apps/notif-center/: Cargo.toml  README.md  build.sh
src/shared/apps/notif-center/src/: main.rs  theme.rs
src/shared/apps/settings/: .gitignore  Cargo.toml
src/shared/apps/settings/src/: dictation.rs  keybindings.rs  layouts.rs  main.rs  taskbar.rs  xkb_labels.rs
src/shared/apps/settings/src/display/: backend.rs  demo.rs  hyprland.rs  mod.rs  monitor.rs
src/shared/apps/settings/ui/: main.slint
src/shared/apps/smpl-calendar/: Cargo.toml
src/shared/apps/smpl-calendar/src/: main.rs  models.rs
src/shared/apps/smpl-common/: Cargo.toml
src/shared/apps/smpl-common/src/: keybindings.rs  lib.rs
src/shared/apps/start-menu/: Cargo.toml
src/shared/apps/start-menu/src/: main.rs  theme.rs
src/shared/apps/start-menu/ui/: main.slint
src/shared/apps/sync-center/: Cargo.toml  README.md  build.rs  spec.md
src/shared/apps/sync-center/src/: config.rs  conflict.rs  dbus.rs  error.rs  lib.rs  models.rs  mounts.rs  notification.rs  rsync_runner.rs  volume_monitor.rs
src/shared/apps/sync-center/ui/: main.slint
src/shared/apps/webapp-center/: Cargo.toml
src/shared/apps/webapp-center/src/: backend.rs  main.rs
src/shared/apps/webapp-center/ui/: main.slint
src/shared/configs/: mimeapps.list
src/shared/configs/bash/: aliases
src/shared/configs/doublecmd/: doublecmd.xml
src/shared/configs/dunst/: dunstrc
src/shared/configs/fastfetch/: config.jsonc
src/shared/configs/fish/: config.fish
src/shared/configs/hyprshell/: config.ron
src/shared/configs/micro/: bindings.json  settings.json
src/shared/configs/rofi/: config.rasi
src/shared/configs/smplos/: bar.conf  bindings-group.conf.bak  bindings.conf
src/shared/disp-center/: Cargo.toml
src/shared/disp-center/src/: hyprland.rs  main.rs
src/shared/disp-center/ui/: app.slint
src/shared/eww/: eww.scss  eww.yuck  notification-hub.scss  quick-settings.scss  quick-settings.yuck  theme-colors.scss  theme-colors.yuck
src/shared/eww/scripts/: active-workspace.sh  (+10 more)
src/shared/installer/: automated_script.sh  configurator  install.sh
src/shared/kb-center/: Cargo.toml
src/shared/kb-center/src/: dictation.rs  main.rs
src/shared/kb-center/ui/: main.slint
src/shared/start-menu/: Cargo.toml
src/shared/start-menu/src/: main.rs
src/shared/start-menu/ui/: main.slint
src/shared/system/: os-release
src/shared/update-policy/: critical-bundle.conf  critical-packages.txt  os-suite-packages.txt
tests/: test_invariant_osc7.c
tools/: debug-scrolling-column.sh  leftclick-fix.sh
(+213 files in other folders)
