[workspace]
members = [
    "smpl-common",
    "start-menu",
    "notif-center",
    "settings",
    "app-center",
    "webapp-center",
    "sync-center",
    "calendar",
]
resolver = "2"

[workspace.package]
version    = "0.2.4"
edition    = "2021"
authors    = ["smplOS <https://github.com/smpl-os>"]
license    = "MIT"
repository = "https://github.com/smpl-os/smpl-apps"

# ── Shared dependency versions ───────────────────────────────────────────────
# Bump here to update all apps at once.
[workspace.dependencies]
# UI
slint                 = { version = "1.8", default-features = false, features = ["backend-winit", "renderer-femtovg, "compat-1-2"] }
i-slint-backend-winit = "1.8"
slint-build           = "1.8"
smpl-common           = { path = "smpl-common" }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP / URL
ureq = { version = "2", features = ["json"] }
url  = "2"

# Date/time
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# System
xkbcommon = "0.9"
libc      = "0.2"
dirs      = "6"
nix       = { version = "0.27", features = ["fs"] }
rfd       = "0.15"

# GTK / GLib (sync-center volume monitoring)
glib = "0.20"
gio  = { version = "0.20", features = ["v2_70"] }

# D-Bus (sync-center)
zbus     = { version = "3.0", features = ["tokio"] }
zvariant = "3.0"

# Async (sync-center)
tokio   = { version = "1", features = ["full"] }
futures = "0.3"

# Logging (sync-center)
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Notifications / errors (sync-center)
notify-rust = "4.10"
uuid        = { version = "1.0", features = ["serde", "v4"] }
anyhow      = "1.0"
thiserror   = "1.0"

# ── Release profile (applied to all apps) ────────────────────────────────────
[profile.release]
lto            = true
codegen-units  = 1
strip          = true
