[package]
name = "kb-center"
version = "1.0.0"
edition = "2021"

[dependencies]
slint = { version = "1.8", default-features = false, features = ["backend-winit", "renderer-femtovg", "compat-1-2"] }
i-slint-backend-winit = "1.8"
xkbcommon = "0.9"
serde_json = "1"
libc = "0.2"

[build-dependencies]
slint-build = "1.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
