[package]
name = "start-menu"
version = "0.1.17"
edition = "2021"

[dependencies]
slint = { version = "1.8", default-features = false, features = ["backend-winit", "renderer-software", "compat-1-2"] }
i-slint-backend-winit = "1.8"

[build-dependencies]
slint-build = "1.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
