[package]
name = "app-center"
version = "0.1.1"
edition = "2021"

[dependencies]
slint = { version = "1.8", default-features = false, features = ["backend-winit", "renderer-femtovg", "compat-1-2"] }
i-slint-backend-winit = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[build-dependencies]
slint-build = "1.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
