[package]
name              = "notif-center"
version.workspace = true
edition.workspace = true

[dependencies]
slint                 = { workspace = true }
i-slint-backend-winit = { workspace = true }
smpl-common           = { workspace = true }
chrono                = { workspace = true }
serde_json            = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }
