[package]
name              = "settings"
version.workspace = true
edition.workspace = true
description       = "smplOS unified Settings app"

[dependencies]
slint                 = { workspace = true }
i-slint-backend-winit = { workspace = true }
smpl-common           = { workspace = true }
xkbcommon             = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
libc                  = { workspace = true }
dirs                  = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }
