[package]
name              = "smpl-calendar"
version           = "0.1.1"
edition           = "2021"

[dependencies]
slint                 = { version = "1.8", default-features = false, features = ["backend-winit", "renderer-software", "compat-1-2"] }
i-slint-backend-winit = "1.8"
serde                 = { version = "1", features = ["derive"] }
serde_json            = "1"
chrono                = { version = "0.4", features = ["serde"] }
dirs                  = "5"
anyhow                = "1"
rusqlite              = { version = "0.32", features = ["bundled"] }

[[bin]]
name = "smpl-calendar"
path = "src/main.rs"

[[bin]]
name = "smpl-calendar-alertd"
path = "src/bin/alertd.rs"

[build-dependencies]
slint-build = "1.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
