[package]
name              = "start-menu"
version.workspace = true
edition.workspace = true

[dependencies]
slint                 = { workspace = true }
i-slint-backend-winit = { workspace = true }
smpl-common           = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }
