[package]
name = "sync-center"
version = "0.1.0"
edition = "2021"
authors = ["smplOS Team"]
license = "GPL-3.0-or-later"
description = "Automatic directory synchronization to external drives"

[[bin]]
name = "sync-center-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "sync-center-gui"
path = "src/bin/gui.rs"

[dependencies]
# GUI
gtk4 = { version = "0.9", features = ["v4_10"] }
# Note: libadwaita versioning is complex, will be added once GTK4 is stable
# For now using GTK4 directly

# GLib/GIO
glib = "0.20"
gio = { version = "0.20", features = ["v2_70"] }

# D-Bus
zbus = { version = "3.0", features = ["tokio"] }
zvariant = "3.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# System utilities
nix = { version = "0.27", features = ["fs"] }
dirs = "5.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
notify-rust = "4.10"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
