[package]
name               = "sync-center"
version.workspace  = true
edition.workspace  = true
authors.workspace  = true
license.workspace  = true
description        = "Automatic directory synchronization to external drives"

[[bin]]
name = "sync-center-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "sync-center-gui"
path = "src/bin/gui.rs"

[dependencies]
slint                 = { workspace = true }
i-slint-backend-winit = { workspace = true }
smpl-common           = { workspace = true }
rfd                   = { workspace = true }
glib                  = { workspace = true }
gio                   = { workspace = true }
zbus                  = { workspace = true }
zvariant              = { workspace = true }
tokio                 = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
tracing               = { workspace = true }
tracing-subscriber    = { workspace = true }
nix                   = { workspace = true }
dirs                  = { workspace = true }
uuid                  = { workspace = true }
notify-rust           = { workspace = true }
anyhow                = { workspace = true }
thiserror             = { workspace = true }
futures               = { workspace = true }
libc                  = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
