[package]
name = "webapp-center"
version = "0.9.0"
edition = "2021"

[dependencies]
slint = { version = "1.8", default-features = false, features = ["backend-winit", "renderer-femtovg", "compat-1-2"] }
i-slint-backend-winit = "1.8"
url = "2"

[build-dependencies]
slint-build = "1.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
